# sms

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  requirements.dev.txt  requirements.txt
account/: admin.py  forms.py  models.py  urls.py  views.py
app/: settings.py  urls.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  attendance.py  auth.py  dashboard.py  health.py  profile.py  public.py  settings.py  staff.py  subject_registration.py
backend/app/api/v1/settings/: __init__.py  _helpers.py  academic.py  admin.py  school.py
backend/app/api/v1/staff/: __init__.py  _helpers.py  access.py  bulk.py  core.py  records.py
backend/app/api/v1/students/: __init__.py  _helpers.py  bulk.py  core.py  enrollment.py  guardians.py
backend/app/core/: config.py  db.py  middleware.py  permissions.py  redis.py  security.py
backend/app/models/: __init__.py  academic.py  assessment.py  attendance.py  base.py  document.py  fees.py  grading.py  reference.py  school.py  staff.py  student.py  user.py
backend/app/schemas/: __init__.py  academic.py  attendance.py  common.py  school.py  settings.py  staff.py  student.py
backend/app/services/: calendar_generator.py  permissions.py  storage.py  teacher_scope.py
backend/app/workers/: __init__.py  jobs.py
backend/migrations/: env.py
backend/migrations/versions/: 20250526_001_baseline.py  20250526_002_school_tenancy_fields.py  20250526_003_class_restructure.py  20250527_004_unique_constraints.py  20250527_005_school_motto.py  20250527_006_staff_personal_fields.py  20250527_007_model_realignment.py  20250527_008_db_indexes.py  20250528_009_user_roles.py  20250528_010_add_housemaster_position.py  20250529_011_attendance_mode.py  20250529_012_school_subjects.py  20250531_013_user_password_reset.py  20250601_014_promotion_document_url.py
backend/scripts/: assign_missing_roles.py  create_superuser.py  seed_dev.py  seed_schools.py
backend/tests/: conftest.py  test_auth.py  test_calendar_generator.py  test_classes.py  test_health.py  test_permissions.py  test_rls.py  test_settings.py  test_staff.py
core/: decorators.py  (+7 more)
(+195 files in other folders)
