[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ttek-sis-backend"
version = "0.1.0"
description = "TTEK School Information System — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",       # Alembic offline mode
    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    # Cache + Jobs
    "redis>=5.1.0",
    "arq>=0.26.0",
    # PDF
    "weasyprint>=62.3",
    "jinja2>=3.1.4",
    "qrcode[pil]>=8.0",
    # Storage
    "boto3>=1.35.0",                # Cloudflare R2 (S3-compatible)
    # Observability
    "sentry-sdk[fastapi]>=2.16.0",
    # HTTP client (internal service calls + Africa's Talking)
    "httpx>=0.27.0",
    # Excel import/export
    "openpyxl>=3.1.5",
    # Utilities
    "python-slugify>=8.0.4",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "factory-boy>=3.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "factory-boy>=3.3.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = ["B008", "RUF012"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "tests/*"]
